# ungoogled-chromium-undetectable

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  download_verify.sh  pyproject.toml  requirements.txt  setup.py
components/ungoogled/: BUILD.gn  __init__.py  features.cc  features.h  fingerprinting_protection.cc  fingerprinting_protection.h  ungoogled_switches.cc  ungoogled_switches.h
components/ungoogled/automation/: advanced_automation_resistance.cc  advanced_automation_resistance.h
components/ungoogled/behavior/: __init__.py  advanced_behavior_simulation.h  browser_behavior_protection.h  complete_behavior_simulation.h  neural_behavior_engine.h  pattern_simulator.h
components/ungoogled/browser/: consistency_engine.h
components/ungoogled/core/: __init__.py  feature_registry.h  feature_registry.py  protection_system_manager.h
components/ungoogled/core_automation/: __init__.py  adaptive_protection.h  automation_controller.h  automation_evader.cc  automation_evader.h  behavior_simulator.h  behavior_synthesizer.h  bezier_curve_generator.h  brave_fingerprint_protections.h  browser_instance.h  client_hints_manager.h  controller_manager.h  controller_manager.py  device_orchestrator.h  enhanced_protection.h  enhanced_protection_orchestrator.cc  extension_privacy_manager.h  fingerprint_manager.h  fingerprint_orchestrator.cc  fingerprint_orchestrator.h  font_privacy_manager.h  graphics_fingerprint_randomizer.cc  graphics_fingerprint_randomizer.h  graphics_protection.h  hardware_protection.h  human_behavior_model.h  human_emulator.h  instance_isolation.h  instance_manager.h  javascript_privacy_manager.h  js_protection.cc  js_protection.h  launch_protocol.cc  media_privacy_manager.h  memory_protection.h  mouse_physics_engine.h  mouse_trajectory_generator.h  movement_obfuscator.h  native_protection.h  network_fingerprint.h  (+20 more)
components/ungoogled/deep_learning/: __init__.py  protection_engine.h
components/ungoogled/device/: model_database.h
components/ungoogled/ecosystem/: complete_ecosystem_integration.h
components/ungoogled/entropy/: __init__.py  quantum_generator.h
components/ungoogled/evasion/: deep_learning_evasion.h
components/ungoogled/extensions/: extension_protection.h
components/ungoogled/fingerprint/: advanced_fingerprint_protection.h  advanced_fingerprint_randomization.cc  advanced_fingerprint_randomization.h  audio_fingerprint_generator.h  battery_fingerprint_generator.h  behavior_pattern_generator.h  canvas_fingerprint_generator.h  cpu_instruction_generator.h  dom_fingerprint_generator.h  enhanced_canvas_protection.h  extension_fingerprint_generator.h  font_fingerprint_generator.h  hardware_event_generator.h  hardware_fingerprint_generator.h  infinite_user_agent_generator.cc  infinite_user_agent_generator.h  locale_fingerprint_generator.h  memory_pattern_generator.h  network_fingerprint_generator.h  neural_fingerprint_engine.h  performance_fingerprint_generator.h  quantum_resistant_masking.h  screen_fingerprint_generator.h  sensor_fingerprint_generator.h  storage_fingerprint_generator.h  syscall_pattern_generator.h  thread_pattern_generator.h  webrtc_fingerprint_generator.h
components/ungoogled/fingerprinting/: config.cc  config.h  domain_settings.h  protection_manager.h  protection_profile.h  protection_service.cc  protection_service.h
components/ungoogled/font/: font_fingerprint_protection.h  protection.h
components/ungoogled/graphics/: advanced_graphics_protection.h  canvas_protection.h  enhanced_webgl_protection.h  webgl_protection.h
components/ungoogled/hardware/: __init__.py  advanced_hardware_virtualization.h  complete_hardware_virtualization.h  enhanced_hardware_protection.cc  enhanced_hardware_protection.h  hardware_api_protection.h  hardware_consistency.h  protection.h
components/ungoogled/input/: input_protection.h
components/ungoogled/integration/: platform_coordinator.h
components/ungoogled/js_engine/: advanced_js_protection.h
components/ungoogled/media/: device_protection.h  protection.h
components/ungoogled/memory/: advanced_memory_protection.h  memory_pattern_protection.h  pattern_protection.h
components/ungoogled/metamorphic/: __init__.py  code_generator.h
components/ungoogled/network/: advanced_network_protection.h  advanced_network_simulation.h  advanced_traffic_simulation.h  complete_network_stack.h  deep_network_protection.h  enhanced_network_protection.h  protection.h
components/ungoogled/neural/: behavior_simulation.h
components/ungoogled/optimization/: resource_manager.h
components/ungoogled/permissions/: permission_protection.h
components/ungoogled/playwright/: BUILD.gn  __init__.py  playwright_controller.cc  playwright_controller.h  virtual_display.h
components/ungoogled/process/: process_isolation.cc  process_isolation.h  process_protection.h
patches/: series
ungoogled-chromium/: BUILD.gn  flags.gn
ungoogled-chromium/patches/: series
(+123 files in other folders)
